se agrego una etiqueta P

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></titles>
+    <title>Arriba Pumas</titles>
 </head>
 <body>
-
+    <p> Ganamos 8-1 Wiiiii </p>
 </body>
 </html>
