--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Arriba Pumas</titles>
+    <link rel= " stylesheet" href= "style.css" type="text/css">
 </head>
 <body>
     <p> Ganamos 8-1 Wiiiii </p>
