me cambie de rama

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Arriba Pumas</titles>
+    <title>Arriba Pumas</title>
     <link rel= " stylesheet" href= "style.css" type="text/css">
 </head>
 <body>
+    <h1> se borro la etiqueta P</h1>
+
+    <p> Me encuentro en otra Branch</p>
 </body>
 </html>
